    is most likely useless otherwise. i.e., you now need to manually call via
    rk.JS.vars(<frame object>) with no modifiers if you happen to need the
    frame's ID for whatever reason
  - adjusted plugin2script() to the new rk.XML.preview() parameters (see
    "added")
  - rk.XML.embed() now also accepts objects of class rk.plug.comp as
    components
  - rk.XML.connect() now allows objects of class rk.plug.comp to be used as clients
    and <external> nodes to be used as the "set" modifier for that client, and can
    therefore be used to connect properties from embedded plugins
  - objects of class rk.JS.var now have a new slot "methods" to append method calls
  - moved internal js.try.scan() function from body of rk.plugin.component() to
    rk-internal.R
added:
  - new parameters "mode", "placement", "active" and "id.name" in
    rk.XML.preview()
  - new parameter "preview" in rk.JS.doc() to force adding a preview()
    function
  - rk.plugin.component() and rk.plugin.skeleton() now support "preview" in
    both the "js" option and the "scan" option
  - new options "preview" and "level" in rk.JS.saveobj()
  - id() gained the new attribute "guess.modifier" to toggle the new default
    for <frame> nodes in JS (see above)
  - new parameter "namespace" in rk.XML.embed() to result in
    "namespace::component", takes character strings, <about> nodes and pluginmap XML trees and
    is not yet covered by plugin2script()
  - new function rk.JS.method() to generate JS method calls

changes in version 0.08-1 (2015-12-17)
fixed:
  - attribute "max_precision" in <spinbox> was misspelled
  - rk.XML.connect() still handled modifiers for "governor" wrong if it
    wasn't a XiMpLe node
  - also fixed how rk.XML.convert() and rk.XML.switch() were handling
    modifier checking
  - rk.XML.dependencies() didn't know about min/max versions of pluginmaps
    (fixed in rk.XML.about() as well)
  - some fixes to the skeleton GUI and demo script